# Nordic-Headunit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
appNordicHeadunit_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
appNordicHeadunit_autogen/UVLADIE3JM/: moc_MediaService.cpp  moc_MediaService.cpp.d  moc_MediaService.cpp.json  moc_NavigationService.cpp  moc_NavigationService.cpp.d  moc_PhoneService.cpp  moc_PhoneService.cpp.d  moc_SystemSettings.cpp  moc_SystemSettings.cpp.d  moc_SystemSettings.cpp.json  moc_VehicleService.cpp  moc_VehicleService.cpp.d  moc_VehicleService.cpp.json
deploy/: README.md  eglfs.json  install.sh  nordic-headunit.service  uninstall.sh
i18n/: nordic_sv_SE.ts
meta_types/: appNordicHeadunit_json_file_list.txt  appNordicHeadunit_json_file_list.txt.timestamp  qt6appnordicheadunit_metatypes.json.gen
qml/: Main.qml  NordicTheme.qml
qml/Components/: AppTile.qml  BalanceFader.qml  DraggableWidget.qml  Equalizer.qml  MediaControlButton.qml  NordicButton.qml  NordicCard.qml  NordicCircularGauge.qml  NordicGlass.qml  NordicIcon.qml  NordicListItem.qml  NordicModal.qml  NordicPageContainer.qml  NordicPageRouter.qml  NordicSlider.qml  NordicSpinner.qml  NordicText.qml  NordicTextField.qml  NordicToast.qml  ResponsiveText.qml  SettingsCategory.qml  SettingsItem.qml  SettingsSlider.qml  SettingsSubPage.qml  SettingsToggle.qml  StatusIndicator.qml  ToastManager.qml  WidgetGrid.qml
qml/Components/Maps/: FloatingMapControls.qml  GuidanceBanner.qml  MapSurface.qml  RoutePreviewSheet.qml  SearchSheet.qml
qml/Layouts/: AppLayout.qml  ClimateBar.qml  DockBar.qml  NowPlayingBar.qml  PersistentBottomBar.qml  StatusBar.qml
qml/Overlays/: ClimateOverlay.qml  ControlCenter.qml  NotificationCenter.qml  OverlayManager.qml  RearCameraOverlay.qml  TelephonyOverlay.qml  VoiceOverlay.qml  VolumeOverlay.qml
qml/Pages/: AppsPage.qml  HomePage.qml  MapPage.qml  MediaPage.qml  PhonePage.qml  SettingsPage.qml  VehiclePage.qml
qml/Pages/Media/: BrowseView.qml  PlayerView.qml  RadioView.qml  SourcesView.qml
qml/Pages/Phone/: ActiveCallView.qml  ContactsView.qml  FavoritesView.qml  KeypadView.qml  RecentsView.qml
qml/Pages/Settings/: AudioSettings.qml  BluetoothSettings.qml  BottomBarSettings.qml  ConnectivitySettings.qml  DateTimeSettings.qml  DisplaySettings.qml  LanguageSettings.qml  MapSettings.qml  NavigationSettings.qml  PrivacySettings.qml  SettingsSidebar.qml  SystemSettingsPage.qml  ThemePlayground.qml  VehicleSettings.qml  WifiSettings.qml
qml/Services/: AudioPolicy.qml  DrivingSafety.qml  MediaService.qml  WidgetRegistry.qml
qml/Theme/: Theme.qml
qml/Widgets/: CalendarWidget.qml  ClimateWidget.qml  ClockWidget.qml  CompassWidget.qml  FavoritesWidget.qml  NavigationWidget.qml  NowPlayingWidget.qml  ParkingWidget.qml  RangeWidget.qml  SpeedWidget.qml  SystemsWidget.qml  TripInfoWidget.qml  WeatherWidget.qml
qmltypes/: appNordicHeadunit_foreign_types.txt
src/: AppModel.cpp  AppModel.h  ContactsModel.cpp  ContactsModel.h  LayoutService.cpp  LayoutService.h  MediaLibrary.cpp  MediaLibrary.h  MediaService.cpp  MediaService.h  NavigationService.cpp  NavigationService.h  PhoneService.cpp  PhoneService.h  RadioTuner.cpp  RadioTuner.h  SystemSettings.cpp  SystemSettings.h  TranslationService.cpp  TranslationService.h  VehicleService.cpp  VehicleService.h
src/HAL/: IAudioHAL.h  IVehicleHAL.h  SimulatedAudioHAL.cpp  SimulatedAudioHAL.h  SimulatedVehicleHAL.cpp  SimulatedVehicleHAL.h
src/Models/: PlaylistModel.cpp  PlaylistModel.h  RadioModel.cpp  RadioModel.h
src/tests/: MediaTest.cpp
